changed uuid generation to uuidv4() based; added endpoints to check uuid's on each run, will remove in prod
